Improve navigation concept
Issue: #3

--- a/diagrams/index.html
+++ b/diagrams/index.html
@@ -3,6 +3,8 @@ title: All Diagrams
 ---
 <h2>All Diagrams</h2>
 
+{% include subNavigation.html %}
+
 {% for diagram in site.diagrams %}
 <h3>
     <a href="{{ diagram.url }}">{{ diagram.name }}</a>
